--- a/Calendar/Calendar.Shared/Strings/en-GB/Resources.resw
+++ b/Calendar/Calendar.Shared/Strings/en-GB/Resources.resw
@@ -387,4 +387,13 @@ Syanne.</value>
   <data name="styles.Content" xml:space="preserve">
     <value>style</value>
   </data>
+  <data name="googlePeriod.Text" xml:space="preserve">
+    <value>period (days)</value>
+  </data>
+  <data name="googleText.Text" xml:space="preserve">
+    <value>events from your google calendar would be loaded only when you open the application. calendar will remind you when it should be opened with the help of the live tile.</value>
+  </data>
+  <data name="ServiceMessage" xml:space="preserve">
+    <value>data is loaded, refresh the calendar (button on the bottom appbar) or restart the application</value>
+  </data>
 </root>
