--- a/Calendar/Calendar.Shared/Strings/en/Resources.resw
+++ b/Calendar/Calendar.Shared/Strings/en/Resources.resw
@@ -331,6 +331,9 @@
   <data name="settingsTop.Content" xml:space="preserve">
     <value>settings</value>
   </data>
+  <data name="settingsTopWP.Text" xml:space="preserve">
+    <value>settings</value>
+  </data>
   <data name="clickToPreview.Text" xml:space="preserve">
     <value>click to enlarge</value>
   </data>
@@ -395,5 +398,8 @@ Syanne.</value>
   </data>
   <data name="ServiceMessage" xml:space="preserve">
     <value>data is loaded, refresh the calendar (button on the bottom appbar) or restart the application</value>
+  </data>
+  <data name="refresh.Label" xml:space="preserve">
+    <value>refresh</value>
   </data>
 </root>
