--- a/Calendar/Calendar.Shared/Strings/ru-RU/Resources.resw
+++ b/Calendar/Calendar.Shared/Strings/ru-RU/Resources.resw
@@ -359,7 +359,7 @@
     <value>Strings\Holidays.xml</value>
   </data>
   <data name="msgBody" xml:space="preserve">
-    <value>Спасибо что скачали это приложение и помогаете его развивать! Произошли изменения с живой плиткой и всплывающими напоминаниями, поэтому убедительная просьба: перейдите на страницу настроек, выключите живую плитку и/или напоминание, затем включите. 
+    <value>Если вы используете настольную версию, можете попробовать новую функцию – взаимодействие с Google Calendar. Сервис находится в стадии разработки, свои комментарии и пожелания по этому поводу отправляйте в службу поддержки. Также для настольной версии была пересмотрена страница настроек: чтобы изменить внешний вид приложения, вы можете перейти на страницу «стиль» из нижней панели приложения. Остальные настройки расположены на стандартной панели настроек, которую можно вызвать так же, как и в стандартных приложениях платформы., поэтому убедительная просьба: перейдите на страницу настроек, выключите живую плитку и/или напоминание, затем включите. 
 Предложения и сообщения об проблемах присылайте на адрес syanne.red@gmail.com. Так у нас с вами появится обратная связь, и ваше сообщение будет быстрее обработано. Чтобы отправить сообщение, используйте кнопку "поддержка" на нижней панели приложения.
 
 Если вам понравилось приложение, не забудьте поставить оценку и оставить свой отзыв в магазине (кнопка "оценить").  Просмотреть это сообщение еще раз вы сможете, нажав на кнопку "о версии" на нижней панели приложения.
