--- a/Calendar/Calendar.Shared/Strings/uk-UA/Resources.resw
+++ b/Calendar/Calendar.Shared/Strings/uk-UA/Resources.resw
@@ -204,7 +204,7 @@
     <value>Оновлений календар з живою плиткою, великими наборами державних, міжнародних та релігійних свят. Цей календар завжди допоможе вам знайти файний привід для святкування!</value>
   </data>
   <data name="ApplicationDisplayName" xml:space="preserve">
-    <value>Календар + Свята BETA</value>
+    <value>Календар + Свята</value>
   </data>
   <data name="periodText.Text" xml:space="preserve">
     <value>період (години)</value>
@@ -335,7 +335,7 @@
   </data>
   <data name="settingsTop.Content" xml:space="preserve">
     <value>налаштування</value>
-    </data>
+  </data>
   <data name="settingsTopWP.Text" xml:space="preserve">
     <value>налаштування</value>
   </data>
@@ -358,7 +358,7 @@
     <value>стиль</value>
   </data>
   <data name="msgBody" xml:space="preserve">
-    <value>Дана версія додатку знаходиться у стадії доробки. Якщо у Вас виникли проблеми, будь ласка, надішліть їх опис на поштову адресу служби підтримки: syanne.red@gmail.com.
+    <value>Якщо ви користуєтесь настільною версією, можете спробувати нову функцію – взаємодія з Google Calendar. Сервіс знаходиться в стадії розробки, свої коментарі та побажання з цього приводу відправляйте до служби підтримки. Також для настільної версії було переглянуто сторінку налаштувань: щоб змінити зовнішній вигляд програми, ви можете перейти на сторінку «стиль» з нижньої панелі програми. Інші налаштування розташовані на стандартній панелі налаштувань, яку можна викликати так само, як і в стандартних додатках платформи.
 Спасибі, що завантажили цей додаток і допомагаєте його розвивати! Пропозиції та повідомлення про проблеми надсилайте на адресу syanne.red@gmail.com. Таким чином у нас з вами з'явиться зворотний зв'язок, і ваше повідомлення буде швидше оброблено. Швидко перейти до вашого поштового клієнту допоможе кнопка "підтримка" на нижній панелі додатку.
 
 Якщо вам сподобався календар, не забудьте оцінити його і залишити свій відгук в магазині (кнопка "оцінити"). Щоб переглянути це повідомлення ще раз натисніть кнопку "про версію" на нижній панелі додатку.
