Refactor 1. BgTasks refactored 2. PurchaseService class 3. Updated ad SDK 4. Added shared class for SettingsPage/Flyout (SharedSetingsServices) 5. New tile service 6. Both manifests (added new bg task)

--- a/Calendar/Calendar.Shared/Strings/en-AU/Resources.resw
+++ b/Calendar/Calendar.Shared/Strings/en-AU/Resources.resw
@@ -403,4 +403,13 @@ Syanne.</value>
   <data name="refresh.Label" xml:space="preserve">
     <value>refresh</value>
   </data>
+  <data name="daysAmountText.Text" xml:space="preserve">
+    <value>days</value>
+  </data>
+  <data name="smartTileHeaderText.Text" xml:space="preserve">
+    <value>smart tile</value>
+  </data>
+  <data name="smartTileText.Text" xml:space="preserve">
+    <value>smart tile shows more events in set amount of days</value>
+  </data>
 </root>
