Some improvements for SettingsPage/Panel

--- a/Calendar/Calendar.Shared/Strings/BufferResources.resw
+++ b/Calendar/Calendar.Shared/Strings/BufferResources.resw
@@ -117,30 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="buyBgText" xml:space="preserve">
-    <value>This package, which will cost you just $1, includes:
-- Toast Notifications
-- SmartTile</value>
+  <data name="disableSmartTile" xml:space="preserve">
+    <value>please disable smart tile to enable this one</value>
   </data>
-  <data name="buyBgTitle.Text" xml:space="preserve">
-    <value> package "notifications"</value>
+  <data name="disableTile" xml:space="preserve">
+    <value>please disable live tile to enable this one</value>
   </data>
-  <data name="buyMeText.Text" xml:space="preserve">
-    <value>for $2 you will receive:
-- 10 color themes;
-- no ads;
-- all services from package "notifications"</value>
-  </data>
-  <data name="BuyMeTextMP" xml:space="preserve">
-    <value>for $2 you will receive:
-- 10 color themes;
-- no ads;
-- all services from package "notifications"</value>
-  </data>
-  <data name="buyMeTitle.Text" xml:space="preserve">
-    <value> package "all services"</value>
-  </data>
-  <data name="BuyMeTitleMP" xml:space="preserve">
-    <value>package "all services"</value>
+  <data name="errorOccured" xml:space="preserve">
+    <value>sorry some problem occurred</value>
   </data>
 </root>
